fix(tunnel): require explicit origin and split metrics port

--- a/examples/ts/browser-direct/index.html
+++ b/examples/ts/browser-direct/index.html
@@ -22,16 +22,7 @@
     <pre id="out"></pre>
 
     <script type="module">
-      import {
-        base64urlDecode,
-        ByteReader,
-        clientHandshake,
-        RpcClient,
-        RpcProxy,
-        WebSocketBinaryTransport,
-        writeStreamHello,
-        YamuxSession
-      } from "../../../ts/dist/index.js";
+      import { ByteReader, connectDirectClientRpc, writeStreamHello } from "../../../ts/dist/index.js";
 
       const $in = document.getElementById("in");
       const $out = document.getElementById("out");
@@ -42,31 +33,6 @@
 
       function logLine(s) {
         $out.textContent += s + "\n";
-      }
-
-      function waitOpen(ws) {
-        return new Promise((resolve, reject) => {
-          const onOpen = () => {
-            cleanup();
-            resolve();
-          };
-          const onErr = () => {
-            cleanup();
-            reject(new Error("websocket error"));
-          };
-          const onClose = () => {
-            cleanup();
-            reject(new Error("websocket closed"));
-          };
-          const cleanup = () => {
-            ws.removeEventListener("open", onOpen);
-            ws.removeEventListener("error", onErr);
-            ws.removeEventListener("close", onClose);
-          };
-          ws.addEventListener("open", onOpen);
-          ws.addEventListener("error", onErr);
-          ws.addEventListener("close", onClose);
-        });
       }
 
       function waitNotify(proxy, typeId, timeoutMs) {
@@ -84,64 +50,11 @@
         });
       }
 
-      async function connectDirectClientRpc(info) {
-        const ws = new WebSocket(info.ws_url);
-        await waitOpen(ws);
-
-        const transport = new WebSocketBinaryTransport(ws);
-        const psk = base64urlDecode(info.e2ee_psk_b64u);
-        const suite = info.default_suite;
-        const secure = await clientHandshake(transport, {
-          channelId: info.channel_id,
-          suite,
-          psk,
-          clientFeatures: 0,
-          maxHandshakePayload: 8 * 1024,
-          maxRecordBytes: 1 << 20
-        });
-
-        const conn = {
-          read: () => secure.read(),
-          write: (b) => secure.write(b),
-          close: () => secure.close()
-        };
-        const mux = new YamuxSession(conn, { client: true });
-        const rpcStream = await mux.openStream();
-
-        const reader = new ByteReader(async () => {
-          try {
-            return await rpcStream.read();
-          } catch {
-            return null;
-          }
-        });
-        const readExactly = (n) => reader.readExactly(n);
-        const write = (b) => rpcStream.write(b);
-
-        await writeStreamHello(write, "rpc");
-        const rpc = new RpcClient(readExactly, write);
-        const rpcProxy = new RpcProxy();
-        rpcProxy.attach(rpc);
-
-        return {
-          secure,
-          mux,
-          rpc,
-          rpcProxy,
-          close: () => {
-            rpcProxy.detach();
-            rpc.close();
-            mux.close();
-            secure.close();
-          }
-        };
-      }
-
       $connect.addEventListener("click", async () => {
         $out.textContent = "";
         try {
           const info = JSON.parse($in.value);
-          client = await connectDirectClientRpc(info);
+          client = await connectDirectClientRpc(info, { origin: window.location.origin });
           $close.disabled = false;
 
           const notified = waitNotify(client.rpcProxy, 2, 2000);
