feat(examples): add simple and advanced client variants
- Update README.md to clarify examples include both high-level helpers and manual stack implementations
- Expand examples/README.md with detailed listings of simple (high-level helpers) and advanced (manual stack) client variants for Go, Node.js, and browser environments
- Add new Go simple client examples (go_client_direct_simple, go_client_tunnel_simple) using go/connect helpers
- Add new TypeScript advanced client

--- a/examples/ts/browser-direct/index.html
+++ b/examples/ts/browser-direct/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h1>Flowersec Direct Demo (Browser)</h1>
+    <p>This page uses the high-level client helper. For the manual stack, open <a href="./advanced.html">advanced.html</a>.</p>
     <p>Paste JSON from <code>examples/go/direct_demo</code>.</p>
     <textarea id="in" spellcheck="false"></textarea>
     <div style="margin: 12px 0">
