feat(examples): add comprehensive code comments and documentation
- Add detailed comments to controlplane_demo explaining its purpose, key generation, and channel init flow
- Document tunnel attach token behavior and demo limitations
- Enhance direct_demo with comments about WebSocket security, E2EE handshake, and deployment considerations
- Add test descriptions clarifying validation of HTTP handler contracts
- Include browser-specific notes about Origin header behavior and tunnel server requirements
- Improve overall code readability and maintainability for example implementations

--- a/examples/ts/browser-direct/index.html
+++ b/examples/ts/browser-direct/index.html
@@ -25,6 +25,10 @@
     <script type="module">
       import { ByteReader, connectDirectClientRpc, writeStreamHello } from "../../../ts/dist/index.js";
 
+      // Browser notes:
+      // - Browsers set the WebSocket Origin header automatically to window.location.origin.
+      // - The direct demo server enforces an Origin allow-list; make sure you started it with an allowlist that includes
+      //   this page's origin (e.g. http://127.0.0.1:5173).
       const $in = document.getElementById("in");
       const $out = document.getElementById("out");
       const $connect = document.getElementById("connect");
@@ -55,14 +59,18 @@
         $out.textContent = "";
         try {
           const info = JSON.parse($in.value);
+          // High-level helper: it performs E2EE handshake + yamux + RPC wiring.
+          // It also checks that the provided origin matches window.location.origin.
           client = await connectDirectClientRpc(info, { origin: window.location.origin });
           $close.disabled = false;
 
+          // In these demos, type_id=1 responds {"ok":true} and the server also emits notify type_id=2.
           const notified = waitNotify(client.rpcProxy, 2, 2000);
           const resp = await client.rpcProxy.call(1, {});
           logLine("rpc response: " + JSON.stringify(resp.payload));
           logLine("rpc notify: " + JSON.stringify(await notified));
 
+          // Open a separate yamux stream ("echo") to show multiplexing over the same secure channel.
           const echo = await client.mux.openStream();
           const reader = new ByteReader(async () => {
             try {
