--- a/examples/ts/browser-direct/advanced.html
+++ b/examples/ts/browser-direct/advanced.html
@@ -35,6 +35,9 @@
         writeStreamHello
       } from "../../../ts/dist/index.js";
 
+      // Browser notes:
+      // - You cannot manually set the WebSocket Origin header in browsers; it is always window.location.origin.
+      // - The direct demo server enforces an Origin allow-list; make sure it includes this page's origin.
       const $in = document.getElementById("in");
       const $out = document.getElementById("out");
       const $connect = document.getElementById("connect");
@@ -126,9 +129,12 @@
         closeClient();
         try {
           const info = JSON.parse($in.value);
+          // Step 1: WebSocket connect.
+          // The browser automatically supplies the Origin header based on window.location.origin.
           const ws = new WebSocket(info.ws_url);
           await waitOpen(ws, 10_000);
 
+          // Step 2: E2EE handshake over the websocket binary transport.
           const transport = new WebSocketBinaryTransport(ws);
           const psk = base64urlDecode(info.e2ee_psk_b64u);
           const suite = info.default_suite;
@@ -142,6 +148,7 @@
             timeoutMs: 10_000
           });
 
+          // Step 3: Yamux session over the secure channel.
           const conn = {
             read: () => secure.read(),
             write: (b) => secure.write(b),
@@ -149,6 +156,7 @@
           };
           const mux = new YamuxSession(conn, { client: true });
 
+          // Step 4: RPC stream (first yamux stream) with StreamHello="rpc".
           const rpcStream = await mux.openStream();
           const rpcReader = new ByteReader(async () => {
             try {
@@ -161,6 +169,7 @@
           const write = (b) => rpcStream.write(b);
           await writeStreamHello(write, "rpc");
 
+          // Step 5: RpcClient + RpcProxy: typed request/notify over type_id routing.
           const rpc = new RpcClient(readExactly, write);
           const rpcProxy = new RpcProxy();
           rpcProxy.attach(rpc);
@@ -168,11 +177,13 @@
           client = { secure, mux, rpc, rpcProxy };
           $close.disabled = false;
 
+          // In these demos, type_id=1 responds {"ok":true} and the server also emits notify type_id=2.
           const notified = waitNotify(rpcProxy, 2, 2000);
           const resp = await rpcProxy.call(1, {});
           logLine("rpc response: " + JSON.stringify(resp.payload));
           logLine("rpc notify: " + JSON.stringify(await notified));
 
+          // Open a separate yamux stream ("echo") to show multiplexing.
           const echo = await mux.openStream();
           const echoReader = new ByteReader(async () => {
             try {
@@ -200,4 +211,3 @@
     </script>
   </body>
 </html>
-
