--- a/examples/ts/browser-tunnel/index.html
+++ b/examples/ts/browser-tunnel/index.html
@@ -23,7 +23,7 @@
     <pre id="out"></pre>
 
     <script type="module">
-      import { connectTunnel } from "../../../flowersec-ts/dist/facade.js";
+      import { connectTunnelBrowser } from "../../../flowersec-ts/dist/browser/index.js";
       import { createDemoClient } from "../../../flowersec-ts/dist/gen/flowersec/demo/v1.rpc.gen.js";
       import { ByteReader } from "../../../flowersec-ts/dist/yamux/index.js";
 
@@ -69,8 +69,7 @@
           const obj = JSON.parse($in.value);
           const grant = pickGrantClient(obj);
           // High-level helper: it performs tunnel attach + E2EE handshake + yamux + RPC.
-          // It also checks that the provided origin matches window.location.origin.
-          client = await connectTunnel(grant, { origin: window.location.origin });
+          client = await connectTunnelBrowser(grant);
           $close.disabled = false;
 
           const demo = createDemoClient(client.rpc);
