--- a/examples/ts/browser-tunnel/index.html
+++ b/examples/ts/browser-tunnel/index.html
@@ -24,7 +24,7 @@
 
     <script type="module">
       import { connectTunnelBrowser } from "../../../flowersec-ts/dist/browser/index.js";
-      import { createDemoClient } from "../../../flowersec-ts/dist/_examples/flowersec/demo/v1.rpc.gen.js";
+      import { createDemoSession } from "../../../flowersec-ts/dist/_examples/flowersec/demo/v1.facade.gen.js";
       import { ByteReader } from "../../../flowersec-ts/dist/yamux/index.js";
 
       // Browser notes:
@@ -37,7 +37,7 @@
       const $connect = document.getElementById("connect");
       const $close = document.getElementById("close");
 
-      let client = null;
+      let sess = null;
 
       function logLine(s) {
         $out.textContent += s + "\n";
@@ -63,18 +63,17 @@
         try {
           const obj = JSON.parse($in.value);
           // High-level helper: it performs tunnel attach + E2EE handshake + yamux + RPC.
-          client = await connectTunnelBrowser(obj);
+          sess = createDemoSession(await connectTunnelBrowser(obj));
           $close.disabled = false;
 
-          const demo = createDemoClient(client.rpc);
-          const notified = waitHello(demo, 2000);
-          const resp = await demo.ping({});
+          const notified = waitHello(sess, 2000);
+          const resp = await sess.ping({});
           logLine("rpc response: " + JSON.stringify(resp));
           logLine("rpc notify: " + JSON.stringify(await notified));
 
           // Open a separate yamux stream ("echo") to show multiplexing over the same secure channel.
-          // Note: client.openStream(kind) automatically writes the StreamHello(kind) preface.
-          const echo = await client.openStream("echo");
+          // Note: openStream(kind) automatically writes the StreamHello(kind) preface.
+          const echo = await sess.openStream("echo");
           const reader = new ByteReader(async () => {
             try {
               return await echo.read();
@@ -93,8 +92,8 @@
       });
 
       $close.addEventListener("click", () => {
-        client?.close();
-        client = null;
+        sess?.close();
+        sess = null;
         $close.disabled = true;
         logLine("closed");
       });
