--- a/examples/ts/browser-tunnel/index.html
+++ b/examples/ts/browser-tunnel/index.html
@@ -66,8 +66,8 @@
           sess = createDemoSession(await connectTunnelBrowser(obj));
           $close.disabled = false;
 
-          const notified = waitHello(sess, 2000);
-          const resp = await sess.ping({});
+          const notified = waitHello(sess.demo, 2000);
+          const resp = await sess.demo.ping({});
           logLine("rpc response: " + JSON.stringify(resp));
           logLine("rpc notify: " + JSON.stringify(await notified));
 
