--- a/examples/ts/browser-tunnel/index.html
+++ b/examples/ts/browser-tunnel/index.html
@@ -17,8 +17,10 @@
     <p>Paste JSON from the controlplane <code>/v1/channel/init</code> response (either the full object or <code>grant_client</code> only).</p>
     <textarea id="in" spellcheck="false"></textarea>
     <div style="margin: 12px 0">
+      <button id="fetch" disabled>Fetch Grant</button>
       <button id="connect">Connect</button>
       <button id="close" disabled>Close</button>
+      <span id="status" style="margin-left: 12px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;"></span>
     </div>
     <pre id="out"></pre>
 
@@ -34,13 +36,30 @@
       // - Tunnel attach tokens are one-time use; if you refresh/reconnect, mint a new channel init again.
       const $in = document.getElementById("in");
       const $out = document.getElementById("out");
+      const $fetch = document.getElementById("fetch");
       const $connect = document.getElementById("connect");
       const $close = document.getElementById("close");
+      const $status = document.getElementById("status");
 
       let sess = null;
 
       function logLine(s) {
         $out.textContent += s + "\n";
+      }
+
+      function setStatus(s) {
+        $status.textContent = s;
+      }
+
+      async function detectDevServer() {
+        try {
+          const resp = await fetch("/__demo/status");
+          if (!resp.ok) return;
+          $fetch.disabled = false;
+          setStatus("dev server detected");
+        } catch {
+          // ignore
+        }
       }
 
       function waitHello(demo, timeoutMs) {
@@ -58,13 +77,35 @@
         });
       }
 
+      $fetch.addEventListener("click", async () => {
+        $out.textContent = "";
+        setStatus("fetching grant...");
+        try {
+          const resp = await fetch("/__demo/channel/init", {
+            method: "POST",
+            headers: { "content-type": "application/json" },
+            body: "{}",
+          });
+          const text = await resp.text();
+          if (!resp.ok) throw new Error(`fetch failed (${resp.status}): ${text}`);
+          const obj = JSON.parse(text);
+          $in.value = JSON.stringify(obj, null, 2);
+          setStatus("grant loaded");
+        } catch (e) {
+          setStatus("fetch failed");
+          logLine(String(e?.stack ?? e));
+        }
+      });
+
       $connect.addEventListener("click", async () => {
         $out.textContent = "";
+        setStatus("connecting...");
         try {
           const obj = JSON.parse($in.value);
           // High-level helper: it performs tunnel attach + E2EE handshake + yamux + RPC.
           sess = createDemoSession(await connectTunnelBrowser(obj));
           $close.disabled = false;
+          setStatus("connected");
 
           const notified = waitHello(sess.demo, 2000);
           const resp = await sess.demo.ping({});
@@ -87,6 +128,7 @@
           logLine("echo response: " + JSON.stringify(new TextDecoder().decode(got)));
           await echo.close();
         } catch (e) {
+          setStatus("error");
           logLine(String(e?.stack ?? e));
         }
       });
@@ -95,8 +137,11 @@
         sess?.close();
         sess = null;
         $close.disabled = true;
+        setStatus("closed");
         logLine("closed");
       });
+
+      detectDevServer();
     </script>
   </body>
 </html>
