--- a/examples/ts/browser-tunnel/index.html
+++ b/examples/ts/browser-tunnel/index.html
@@ -27,7 +27,7 @@
     <script type="module">
       import { connectTunnelBrowser } from "../../../flowersec-ts/dist/browser/index.js";
       import { createDemoSession } from "../../../flowersec-ts/dist/_examples/flowersec/demo/v1.facade.gen.js";
-      import { ByteReader } from "../../../flowersec-ts/dist/yamux/index.js";
+      import { createByteReader } from "../../../flowersec-ts/dist/streamio/index.js";
 
       // Browser notes:
       // - Browsers set the WebSocket Origin header automatically to window.location.origin.
@@ -115,13 +115,7 @@
           // Open a separate yamux stream ("echo") to show multiplexing over the same secure channel.
           // Note: openStream(kind) automatically writes the StreamHello(kind) preface.
           const echo = await sess.openStream("echo");
-          const reader = new ByteReader(async () => {
-            try {
-              return await echo.read();
-            } catch {
-              return null;
-            }
-          });
+          const reader = createByteReader(echo);
           const msg = new TextEncoder().encode("hello over yamux stream: echo");
           await echo.write(msg);
           const got = await reader.readExactly(msg.length);
